--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html,body{
     height: 100px;
     margin:0%;
     padding:0%;
-    background-color: ivory;
+    background-color:white;
 
 }
 .outer-box{
